# ParaCL

./: .gitignore  CMakeLists.txt  README.md  main.cc  testing.sh
ast_tree/: assignment.hpp  ast_tree.hpp  binary_expr.hpp  if_stmt.hpp  node_types.hpp  number_expr.hpp  print_stmt.hpp  read_expr.hpp  scope_node.hpp  symbol_table.hpp  unary_expr.hpp  variable_expr.hpp  while_stmt.hpp
ast_tree/observer/: observer.hpp
data_tree/: assignment.hpp  ast_nodes_include.hpp  ast_tree.hpp  base_ast_node.hpp  binary_expr.hpp  binary_operations.hpp  if_condition.hpp  if_stmt.hpp  node_api.hpp  node_types.hpp  number_expr.hpp  number_node.hpp  print_function.hpp  print_stmt.hpp  read_expr.hpp  scope_node.hpp  symbol_table.hpp  test.c  test.cpp  tree.hpp  tree_nodes_include.hpp  unary_expr.hpp  unary_operations.hpp  value_expressions.hpp  variable_expr.hpp  variable_node.hpp  while_stmt.hpp
data_tree/visitor/: observer.hpp  process_nodes.hpp  visitor.hpp
examples/: 000.in  001.in  002.in  003.in  004.in  005.in  006.in  009.in
examples/working/: t.in
examples/wrong/: wc2.in  ws1.in
parsing/: flex.l  parser.y
parsing/include/: driver.hpp  lexer.hpp
src/: main.cc
test/: factorial.in  gcc.c  gcd.in  input.in  output.out_  testing.sh
test/ill_formed/: ws2.in  ws3.in  wsm1.in
test/well_formed/: 002.in  003.in  010.in  011.in  012.in  013.in  014.in  015.in  016.in  017.in  018.in  comment_test.txt  test_symtab.in  wr001.in  z_test.in
test/well_formed/correct/: 002.corr  015.corr  016.corr  018.corr
test/well_formed/input/: 006.inp
(+6 files in other folders)
